fix: color fixed for scrollbar

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -19,17 +19,21 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #f0edf3 !important;
+  background: #ffffff !important;
   border-radius: 10px !important;
 }
 
 body::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, #f0edf3, #fff) !important;
+  background: linear-gradient(135deg, #b379ee, #5d5fe7) !important;
   border-radius: 10px !important;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(135deg, #f0edf3, #fff) !important;
+  background: linear-gradient(135deg, #b379ee, #5d5fe7) !important;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
 }
 
 .container {
